overflow error on mobile fix#1

--- a/code/src/App.css
+++ b/code/src/App.css
@@ -1,7 +1,3 @@
-body{
-    overflow: hidden;
-}
-
 
 .mobile-overlay{
     transition: 300ms all ease;
@@ -14,6 +10,11 @@ body{
     content: '';
     background-color: rgba(0, 0, 0, 0.535);
     z-index: 0;
+}
+
+.app{
+    position: relative;
+    overflow: hidden;
 }
 
 
